force-app/main/default/objects/ucinn_ascendv2__Interim_Fields_To_Display__c/ucinn_ascendv2__Interim_Fields_To_Display__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Interim Fields To Display</label>
</CustomObject>