force-app/main/default/objects/ucinn_ascendv2__Interim_Fields_To_Display__c/fields/ucinn_ascendv2__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>