force-app/main/default/objects/ucinn_ascendv2__Interim_Fields_To_Display__c/fields/ucinn_ascendv2__Interim_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Record_Type__c</fullName>
    <label>Interim Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>